Fixed some sonar warnings.
Change-Id: Ib526e6a0b79c05b779180b8e3eb90f593def3929
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>